add experimental errorprone support